# electoral_sim

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
configs/scenarios/: 01_unimodal_consensus.yaml  02_polarized_bimodal.yaml  03_multimodal_fragmented.yaml  04_dominant_party.yaml  primary_01_symmetric_polarized.yaml  primary_02_centrist_majority.yaml  primary_03_dominant_left.yaml  primary_04_high_overlap.yaml  primary_06_factionalized_majority.yaml
electoral_sim/: __init__.py  __main__.py  cli.py  fractional.py  fractional_reporting.py  policy.py  primaries.py  scenario.py  social_choice.py  types.py
electoral_sim/ballots/: __init__.py
electoral_sim/candidates/: __init__.py
electoral_sim/data/: __init__.py
electoral_sim/electorate/: __init__.py
electoral_sim/metrics/: __init__.py  groups.py  policy.py  robustness.py
electoral_sim/parties/: __init__.py
electoral_sim/reporting/: __init__.py  models.py  selectors.py
electoral_sim/strategies/: __init__.py  approval.py  base.py  common.py  plurality.py  ranked.py  score.py  sincere.py  turnout.py
electoral_sim/systems/: __init__.py
electoral_sim/utils/: __init__.py  centers.py  pairwise_majority.py  social_choice_criteria.py  viz_electorate.py  viz_metrics.py  (+1 more)
notebooks/: README.md  __init__.py  arrows_impossibility_theorem.ipynb  electoral_dynamics_theory_companion.ipynb  electoral_systems_comparison.ipynb  electoral_systems_polarization_dynamics.ipynb  fractional_reporting_robustness.ipynb  majority_vs_minority_welfare.html  majority_vs_minority_welfare.ipynb  majority_vs_minority_welfare.tex  median_voter_theorem_higher_dimensions.ipynb  party_primaries_turnout_strategy_space.tex  plurality_vs_irv_strategic_comparison.ipynb  quickstart.ipynb  representation_vs_policy_consequences.ipynb  vote_splitting_and_spoiler_effect.ipynb
tests/: test_centers_helpers.py  test_cli.py  test_electoral_dynamics_theory.py  test_fractional_reporting.py  test_group_metrics.py  test_pairwise_majority_helpers.py  test_parties.py  test_party_primary_strategy_space.py  test_polarization_dynamics.py  test_policy.py  test_primaries_helpers.py  test_reporting_models.py  test_representation_vs_policy_consequences.py  test_simulator.py  test_social_choice.py  test_social_choice_criteria.py  test_strategies.py  test_visualizations.py
(+13 files in other folders)
